[gd_scene load_steps=51 format=3 uid="uid://c7pikon8fqtc2"]

[ext_resource type="Texture2D" uid="uid://dpbe1vashe2v6" path="res://boss/leak/leak.png" id="1_0vren"]
[ext_resource type="Script" path="res://boss/leak/leak.gd" id="1_jwu4b"]
[ext_resource type="PackedScene" uid="uid://b1xanvxr52u2h" path="res://boss/leak/leak_2p.tscn" id="2_qck3k"]
[ext_resource type="PackedScene" uid="uid://dlal0ot03b0nh" path="res://boss/leak/leak_3p.tscn" id="3_17x0h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o8g18"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxghp"]
atlas = ExtResource("1_0vren")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ccmn"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya3j5"]
atlas = ExtResource("1_0vren")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtxp0"]
atlas = ExtResource("1_0vren")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o070w"]
atlas = ExtResource("1_0vren")
region = Rect2(1024, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig2ln"]
atlas = ExtResource("1_0vren")
region = Rect2(1280, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo6kh"]
atlas = ExtResource("1_0vren")
region = Rect2(1536, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo7yo"]
atlas = ExtResource("1_0vren")
region = Rect2(1792, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2r0j"]
atlas = ExtResource("1_0vren")
region = Rect2(2048, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgcwe"]
atlas = ExtResource("1_0vren")
region = Rect2(2304, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0h62"]
atlas = ExtResource("1_0vren")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdo53"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rkap"]
atlas = ExtResource("1_0vren")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3mpp"]
atlas = ExtResource("1_0vren")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3myl"]
atlas = ExtResource("1_0vren")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sblrv"]
atlas = ExtResource("1_0vren")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wmt0"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_22oi5"]
atlas = ExtResource("1_0vren")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooyyh"]
atlas = ExtResource("1_0vren")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lip7x"]
atlas = ExtResource("1_0vren")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y0r4"]
atlas = ExtResource("1_0vren")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0jlc"]
atlas = ExtResource("1_0vren")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmma8"]
atlas = ExtResource("1_0vren")
region = Rect2(1792, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxu7"]
atlas = ExtResource("1_0vren")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1jr3"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttc3n"]
atlas = ExtResource("1_0vren")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3abb"]
atlas = ExtResource("1_0vren")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra1ey"]
atlas = ExtResource("1_0vren")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu2wd"]
atlas = ExtResource("1_0vren")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_77122"]
atlas = ExtResource("1_0vren")
region = Rect2(1536, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg2vl"]
atlas = ExtResource("1_0vren")
region = Rect2(1792, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2yth"]
atlas = ExtResource("1_0vren")
region = Rect2(2048, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks2u2"]
atlas = ExtResource("1_0vren")
region = Rect2(2304, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfdms"]
atlas = ExtResource("1_0vren")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_md7t0"]
atlas = ExtResource("1_0vren")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywtc2"]
atlas = ExtResource("1_0vren")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbeer"]
atlas = ExtResource("1_0vren")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6dvo"]
atlas = ExtResource("1_0vren")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5ag2"]
atlas = ExtResource("1_0vren")
region = Rect2(1280, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyf0n"]
atlas = ExtResource("1_0vren")
region = Rect2(1536, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk162"]
atlas = ExtResource("1_0vren")
region = Rect2(1792, 768, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8fgt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8g18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxghp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ccmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya3j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtxp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o070w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig2ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo6kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo7yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2r0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgcwe")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0h62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdo53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rkap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3mpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3myl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sblrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wmt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22oi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22oi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22oi5")
}],
"loop": false,
"name": &"skill1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooyyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lip7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y0r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0jlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmma8")
}],
"loop": false,
"name": &"skill11",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1jr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttc3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3abb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3abb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3abb")
}],
"loop": false,
"name": &"skill2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra1ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu2wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77122")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg2vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2yth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks2u2")
}],
"loop": false,
"name": &"skill22",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfdms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md7t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywtc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeer")
}],
"loop": false,
"name": &"skill3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6dvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5ag2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk162")
}],
"loop": false,
"name": &"skill33",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8ygk"]
size = Vector2(58, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcf0g"]
size = Vector2(58, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5mmi"]
size = Vector2(106, 140)

[node name="leak" type="CharacterBody2D"]
show_behind_parent = true
collision_layer = 64
script = ExtResource("1_jwu4b")
skill2p = ExtResource("2_qck3k")
skill3p = ExtResource("3_17x0h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-8, 0)
sprite_frames = SubResource("SpriteFrames_b8fgt")
animation = &"skill33"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 0
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_e8ygk")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_dcf0g")

[node name="Hitbox" type="Area2D" parent="." groups=["HitboxEnemies"]]
collision_layer = 2
collision_mask = 2
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(-24, -10)
shape = SubResource("RectangleShape2D_g5mmi")
disabled = true

[node name="TimerSkill" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerSkill" to="." method="_on_timer_skill_timeout"]
